# detection-as-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: backtest.yml  coverage.yml  deploy.yml  fp-tracking.yml  test-detections.yml  validate.yml
detection-as-code-phase2/: README.md  pyproject.toml
detection-as-code-phase2/docs/: known_issues.md
detection-as-code-phase2/tools/: deploy_elastic.py  sigma_convert.py  spl_lint.py
detection-as-code-phase3/: README.md  pyproject.toml
detection-as-code-phase3/tests/unit/: test_orchestrator.py
detection-as-code-phase3/tools/orchestrator/: __init__.py  changed_detections.py  run_detonation.py  splunk_query.py  winrm_executor.py
detections/retired/: .gitkeep
detections/windows/credential_access/: T1003.001_lsass_dump_procdump.yml  T1003.006_dcsync_replication.yml
detections/windows/defense_evasion/: T1218.011_rundll32_suspicious_execution.yml
detections/windows/execution/: T1059.001_powershell_encoded_command.yml
docs/: adding_a_new_detection.md  benign_corpus_setup.md  detection_engineering_process.md  phase_3_design.md  retirement_workflow.md  self_hosted_runner.md  victim_vm_setup.md
docs/coverage/: README.md  REPORT.md  badge.json  coverage_layer.json
tests/atomics/: atomic_mapping.yml
tests/unit/: test_phase4.py  test_phase5.py  test_sigma_structure.py
tools/: backtest.py  coverage_report.py  deploy_splunk.py  fp_collector.py  fp_trend.py  latency_dashboard.py  retire_detection.py  validate_sigma.py
tools/orchestrator/: format_pr_comment.py  proxmox_client.py
